[package]
name = "unified-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bsky-sdk = "0.1.20"
reqwest = "0.12.22"
tokio = "1.47.1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
